Modais da tela de gerenciamento de produção prontos

--- a/production_management.html
+++ b/production_management.html
@@ -204,37 +204,79 @@
 
   <!-- MODAL DE VISUALZAR -->
 <div id="modal-see" class="loader2">
-
   <div class="mod">
     <div class="top-modal">
-    <h5>Visualizar Produto</h5>
-    <button class="fechar"></button>
-  </div>
-    
-  <form>
-    <div class="name">
-
-      <label for="">Nome
-        <input id="nome" type="text" placeholder="" disabled/>
-      </label>
-
+      <h5>Visualizar Produção</h5>
+      <button class="fechar"></button>
     </div>
-    <div class="flavors">
-
-      <label for="" id="sab">Sabores
-        
-      </label> 
-
-      <div class="values">
-
-        <label for="">Valor
-          <input id="value1" type="text" placeholder="" disabled/>
-        </label>
-
+    <form>
+      <div class="group">
+        <div class="product">
+          <label for="">Produto
+            <input id="produto" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+        <div class="type">
+          <label for="">Tipo
+            <input id="tipo" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+        <div class="lot">
+          <label for="">Lote
+            <input id="lote" type="text" placeholder="" disabled/>
+          </label>
+        </div>
       </div>
-    </div>
-  </form>
 
+      <div class="group">
+        <div class="package">
+          <label for="">Pacotes
+            <input id="pacotes" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+        <div class="units">
+          <label for="">Unidades
+            <input id="unidades" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+        <div class="quantity">
+          <label for="">Quantidade produzida
+            <input id="quantidade" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+      </div>
+
+      <div class="group">
+        <div class="employee">
+          <label for="">Funcionário
+            <input id="funcinario" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+        <div class="date-production">
+          <label for="">Data de produção
+            <input id="dataproducao" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+        <div class="due-date">
+          <label for="">Data de vencimento
+            <input id="datavencimento" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+      </div>
+
+      <div class="group">
+        <div class="value-production">
+          <label for="">Valor total da produção
+            <input id="valortotalprocucao" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+        <div class="time">
+          <label for="">Prazo
+            <input id="prazo" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
 
@@ -243,31 +285,79 @@
 
   <div class="mod">
     <div class="top-modal">
-    <h5>Editar Produto</h5>
+    <h5>Editar Produção</h5>
     <button class="fechar"></button>
+
   </div>
 
   <form>
-    <div class="name">
-
-      <label for="">Nome
-        <input id="nome2" type="text" placeholder="" disabled/>
-      </label>
-
-    </div>
-    <div class="flavors">
-
-      <label for="" id="sab2">Sabores
-
-      </label> 
-      <div class="values">
-
-        <label for="">Valor
-          <!-- <input id="value1" type="text" placeholder="" disabled/> -->
+    <div class="group">
+      <div class="product">
+        <label for="">Produto
+          <input id="produto" type="text" placeholder="" />
         </label>
-
+      </div>
+      <div class="type">
+        <label for="">Tipo
+          <input id="tipo" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="lot">
+        <label for="">Lote
+          <input id="lote" type="text" placeholder="" />
+        </label>
       </div>
     </div>
+
+    <div class="group">
+      <div class="package">
+        <label for="">Pacotes
+          <input id="pacotes" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="units">
+        <label for="">Unidades
+          <input id="unidades" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="quantity">
+        <label for="">Quantidade produzida
+          <input id="quantidade" type="text" placeholder="" />
+        </label>
+      </div>
+    </div>
+
+    <div class="group">
+      <div class="employee">
+        <label for="">Funcionário
+          <input id="funcinario" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="date-production">
+        <label for="">Data de produção
+          <input id="dataproducao" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="due-date">
+        <label for="">Data de vencimento
+          <input id="datavencimento" type="text" placeholder="" />
+        </label>
+      </div>
+    </div>
+
+    <div class="group">
+      <div class="value-production">
+        <label for="">Valor total da produção
+          <input id="valortotalprocucao" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="time">
+        <label for="">Prazo
+          <input id="prazo" type="text" placeholder="" />
+        </label>
+      </div>
+    </div>
+
     <div class="save">
       <div class="btn-group">
         <button class="btn btn-primary" id="btn_salvar" type="button">SALVAR</button>
@@ -282,12 +372,12 @@
 <div id="modal-delete" class="loader2">
   <div class="mod">
     <div class="top-modal">
-      <h5>Deletar Produto</h5>
+      <h5>Deletar Produção</h5>
       <button class="fechar"></button>
     </div>
 
     <form>
-      <h3 style="color:black">Tem certeza que deseja deletar esse produto?</h3>
+      <h3 style="color:black">Tem certeza que deseja deletar essa produção?</h3>
       <div class="alternative">
         <button type="button" class="btn btn-primary" id="confirm">SIM</button>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="deny">NÃO</button>
