--- a/sale_management.html
+++ b/sale_management.html
@@ -200,80 +200,178 @@
   </div>
 
   <!-- MODAL DE VISUALZAR -->
-<div id="modal-see" class="container">
+<div id="modal-see" class="loader2">
   <div class="mod">
     <div class="top-modal">
       <h5>Visualizar Vendas</h5>
       <button class="fechar"></button>
     </div>
     <form>
+
+      <table>
+        <tr>
+          <th class="top-table">Item</th>
+          <th class="top-table">Quantidade</th>
+          <th class="top-table">Valor</th>
+        </tr>
+        <tr>
+          <td class="data-table">Coxinha de frango</td>
+          <td class="data-table">20</td>
+          <td class="data-table">R$ 0,69</td>
+        </tr>
+        <tr>
+          <td class="data-table">Coxinha de frango</td>
+          <td class="data-table">20</td>
+          <td class="data-table">R$ 0,69</td>
+        </tr>
+      </table>
+
+      <h6>Informações de pagamento</h6>
+
       <div class="group">
-        <div class="product">
-          <label for="">Produto
-            <input id="produto" type="text" placeholder="" disabled/>
+        <div class="payment">
+          <label for="">Forma de pagamento
+            <input id="formapagamento" type="text" placeholder="" disabled/>
           </label>
         </div>
-        <div class="type">
-          <label for="">Tipo
-            <input id="tipo" type="text" placeholder="" disabled/>
+        <div class="payday">
+          <label for="">Data de pagamento
+            <input id="datapagamento" type="text" placeholder="" disabled/>
           </label>
         </div>
-        <div class="lot">
-          <label for="">Lote
-            <input id="lote" type="text" placeholder="" disabled/>
+        <div class="amount-paid">
+          <label for="">Valor pago
+            <input id="valorpago" type="text" placeholder="" disabled/>
           </label>
         </div>
       </div>
 
       <div class="group">
-        <div class="package">
-          <label for="">Pacotes
-            <input id="pacotes" type="text" placeholder="" disabled/>
+        <div class="date-sale">
+          <label for="">Data da venda
+            <input id="datavenda" type="text" placeholder="" disabled/>
           </label>
         </div>
-        <div class="units">
-          <label for="">Unidades
-            <input id="unidades" type="text" placeholder="" disabled/>
+        <div class="seller">
+          <label for="">Vendedor
+            <input id="vendedor" type="text" placeholder="" disabled/>
           </label>
         </div>
-        <div class="quantity">
-          <label for="">Quantidade produzida
-            <input id="quantidade" type="text" placeholder="" disabled/>
+        <div class="delivery">
+          <label for="">Data de entrega
+            <input id="dataentrega" type="text" placeholder="" disabled/>
           </label>
         </div>
-      </div>
-
-      <div class="group">
-        <div class="employee">
-          <label for="">Funcionário
-            <input id="funcinario" type="text" placeholder="" disabled/>
-          </label>
-        </div>
-        <div class="date-production">
-          <label for="">Data de produção
-            <input id="dataproducao" type="text" placeholder="" disabled/>
-          </label>
-        </div>
-        <div class="due-date">
-          <label for="">Data de vencimento
-            <input id="datavencimento" type="text" placeholder="" disabled/>
+        <div class="total">
+          <label for="">Total
+            <input id="total" type="text" placeholder="" disabled/>
           </label>
         </div>
       </div>
 
-      <div class="group">
-        <div class="value-production">
-          <label for="">Valor total da produção
-            <input id="valortotalprocucao" type="text" placeholder="" disabled/>
-          </label>
-        </div>
-        <div class="time">
-          <label for="">Prazo
-            <input id="prazo" type="text" placeholder="" disabled/>
-          </label>
-        </div>
+    </form>
+  </div>
+</div>
+
+<!-- MODAL DE EDITAR -->
+<div id="modal-edit" class="loader2">
+
+  <div class="mod">
+    <div class="top-modal">
+    <h5>Editar Vendas</h5>
+    <button class="fechar"></button>
+
+  </div>
+
+  <form>
+
+    <table>
+      <tr>
+        <th class="top-table">Item</th>
+        <th class="top-table">Quantidade</th>
+        <th class="top-table">Valor</th>
+      </tr>
+      <tr>
+        <td class="data-table">Coxinha de frango</td>
+        <td class="data-table">20</td>
+        <td class="data-table">R$ 0,69</td>
+      </tr>
+      <tr>
+        <td class="data-table">Coxinha de frango</td>
+        <td class="data-table">20</td>
+        <td class="data-table">R$ 0,69</td>
+      </tr>
+    </table>
+
+    <h6>Informações de pagamento</h6>
+
+    <div class="group">
+      <div class="payment">
+        <label for="">Forma de pagamento
+          <input id="formapagamento" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="payday">
+        <label for="">Data de pagamento
+          <input id="datapagamento" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="amount-paid">
+        <label for="">Valor pago
+          <input id="valorpago" type="text" placeholder="" />
+        </label>
+      </div>
+    </div>
+
+    <div class="group">
+      <div class="date-sale">
+        <label for="">Data da venda
+          <input id="datavenda" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="seller">
+        <label for="">Vendedor
+          <input id="vendedor" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="delivery">
+        <label for="">Data de entrega
+          <input id="dataentrega" type="text" placeholder="" />
+        </label>
+      </div>
+      <div class="total">
+        <label for="">Total
+          <input id="total" type="text" placeholder="" />
+        </label>
+      </div>
+    </div>
+
+    <div class="save">
+      <div class="btn-group">
+        <button class="btn btn-primary" id="btn_salvar" type="button">SALVAR</button>
+      </div>
+    </div>
+  </form>
+
+  </div>
+</div>
+
+<!-- MODAL DE DELETAR -->
+<div id="modal-delete" class="loader2">
+  <div class="mod">
+    <div class="top-modal">
+      <h5>Deletar Vendas</h5>
+      <button class="fechar"></button>
+    </div>
+
+    <form>
+      <h3 style="color:black">Tem certeza que deseja deletar essa venda?</h3>
+      <div class="alternative">
+        <button type="button" class="btn btn-primary" id="confirm">SIM</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="deny">NÃO</button>
       </div>
     </form>
+
   </div>
 </div>
 
