--- a/settings_user.html
+++ b/settings_user.html
@@ -218,6 +218,6 @@
   </div> 
 </div>
 <script src="script/preloader.js"></script>
-<script src="script/settings_user.js"></script>
+<script type="module" src="script/settings_user.js"></script>
 </body>
 </html>
