adicionado botões na tabela da tela de encomendas

--- a/orders.html
+++ b/orders.html
@@ -191,13 +191,14 @@
             <th id="opcoes">Opções</th>
           </tr>
         </thead>
-        <tbody id="tablebody"></tbody>
+        <tbody id="tablebody">
           <tr>
             <td>12/08/2021</td>
             <td>1524</td>
-            <td>Entregue</td>
-            <td>pago</td>
+            <td><button class="delivered">entregue</button></td>
+            <td><button class="paid">pago</button></td>
           </tr>
+        </tbody>
       </table>
     </section>
   </section>
