--- a/historic.html
+++ b/historic.html
@@ -44,8 +44,8 @@
             </button>
             <div class="collapse" id="home-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a href="user_registration.html" class="link-dark rounded">Cadastrar usuários</a></li>
-                <li><a href="user_management.html" class="link-dark rounded">Gerenciar usuários</a></li>
+                <li><a href="user_registration.html" class="link-dark rounded">Cadastro de usuários</a></li>
+                <li><a href="user_management.html" class="link-dark rounded">Gerenciamento de usuários</a></li>
               </ul>
             </div>
           </li>
@@ -58,8 +58,8 @@
             </button>
             <div class="collapse" id="dashboard-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a href="sale_registration.html" class="link-dark rounded">Cadastrar vendas</a></li>
-                <li><a href="sale_management.html" class="link-dark rounded">Gerenciar vendas</a></li>
+                <li><a href="sale_registration.html" class="link-dark rounded">Cadastro de vendas</a></li>
+                <li><a href="sale_management.html" class="link-dark rounded">Gerenciamento de vendas</a></li>
               </ul>
             </div>
           </li>
@@ -72,10 +72,10 @@
             </button>
             <div class="collapse" id="orders-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a href="product_registration.html" class="link-dark rounded">Cadastrar produtos</a></li>
-                <li><a href="production_registration.html" class="link-dark rounded">Cadastrar nova produção</a></li>
-                <li><a href="product_management.html" class="link-dark rounded">Gerenciar produtos</a></li>
-                <li><a href="production_management.html" class="link-dark rounded">Gerenciar produção</a></li>
+                <li><a href="product_registration.html" class="link-dark rounded">Cadastro de produtos</a></li>
+                <li><a href="production_registration.html" class="link-dark rounded">Cadastro de nova produção</a></li>
+                <li><a href="product_management.html" class="link-dark rounded">Gerenciamento de produtos</a></li>
+                <li><a href="production_management.html" class="link-dark rounded">Gerenciamento de produção</a></li>
               </ul>
             </div>
           </li>
