Modal de Suporte tela de cadastro de usuário <ATUALIZADO>

--- a/user_registration.html
+++ b/user_registration.html
@@ -176,14 +176,14 @@
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Suporte Modal</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Suporte de Cadastro de Usuário</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
                         <form>
-                          <h6>- Insira os dados em cada campo: nome, sobrenome, usuário e email;</h6>
-                          <h6>- Selecione uma opção de cargo e nível de acesso;</h6>
-                          <h6>- Clicar no botão cadastrar.</h6>
+                          <h6>• Insira os dados em cada campo: nome, sobrenome, usuário e email.</h6>
+                          <h6>• Selecione uma opção de cargo e nível de acesso.</h6>
+                          <h6>• Clicar no botão cadastrar.</h6>
                         </form>
                       </div>
                     </div>
