adicionando dados na table

--- a/historic.html
+++ b/historic.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="css/user_management.css" />
+  <link rel="stylesheet" type="text/css" href="css/historic.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap" rel="stylesheet">
@@ -189,7 +189,18 @@
                     <th>Usuário</th>
                 </tr>
             </thead>
-           <!-- <tbody id="tablebody"></tbody>-->
+           <tbody id="">
+             <tr>
+                <td>12/08/2021</td>
+                <td id="descricao">---------------------------------------------</td>
+                <td>Wesley Eugênio</td>
+              </tr>
+              <tr>
+                <td>13/08/2021</td>
+                <td id="descricao">---------------------------------------------</td>
+                <td>Palloma Ruysa</td>
+              </tr>
+           </tbody>
           </table>       
         </section>
 
