[EM ANDAMENTO] - Tela de produção com usuario e produtos

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -198,11 +198,10 @@
                       <p id="alerta_vendedor" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <label>Data
-                      <input id="date" type="text" placeholder=""/>
+                      <input id="date" type="date" placeholder=""/>
                       <p id="alerta_data" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
-                
                   <div class="p-t-q-p-t" id="boxsale">
                     <div class="product-type-quantity">
                       <div class="product">
