--- a/user_registration.html
+++ b/user_registration.html
@@ -166,12 +166,10 @@
         <section class="registration">
             <div class="title">
               <h2>Cadastro de Usuário</h2>
-                
-                <!-- Button trigger modal -->
                 <button type="button" data-bs-toggle="modal" data-bs-target="#supportModal">
                   <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
                 </button>
-                <!-- Modal -->
+                <!-- Modal Support -->
                 <div class="modal fade" id="supportModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
@@ -189,7 +187,6 @@
                     </div>
                   </div>
                 </div>
-
             </div>            
                 <div class="form">
                   <div class="user-email">
