Modal de Suporte da tela de Cadastro de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -164,12 +164,30 @@
           </ul>
         </header>
         <section class="registration">
-          <div class="title"> 
-            <h2>Cadastro de Venda</h2>
-            <a  href="">
-              <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
-            </a>
-          </div>
+          <div class="title">
+            <h2>Cadastro de Vendas</h2>
+              <button type="button" data-bs-toggle="modal" data-bs-target="#supportModal">
+                <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
+              </button>
+              <!-- Modal Support -->
+              <div class="modal fade" id="supportModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Suporte de Gerenciamento de Usuário</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <h6>• Insira os dados em cada campo: nome, sobrenome, usuário e email.</h6>
+                        <h6>• Selecione uma opção de cargo e nível de acesso.</h6>
+                        <h6>• Clicar no botão cadastrar.</h6>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div> 
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
                   <button class="nav-link" id="product-tab" data-bs-toggle="tab" data-bs-target="#product" type="button" role="tab" aria-controls="product" aria-selected="false">Produtos</button>
