--- a/user_management.html
+++ b/user_management.html
@@ -170,7 +170,7 @@
         <!--Título da tela-->
         <section class="section-title">
           <div class="title">
-            <h2>Cadastro de Usuário</h2>
+            <h2>Gerenciamento de Usuário</h2>
               <button type="button" data-bs-toggle="modal" data-bs-target="#supportModal">
                 <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
               </button>
