--- a/sale_registration.html
+++ b/sale_registration.html
@@ -174,7 +174,7 @@
                 <div class="modal-dialog modal-lg">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Suporte de Gerenciamento de Usuário</h5>
+                      <h5 class="modal-title" id="exampleModalLabel">Suporte de Cadastro de Vendas</h5>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
