--- a/user_management.html
+++ b/user_management.html
@@ -170,7 +170,7 @@
         <!--Título da tela-->
         <section class="section-title">
           <div class="title">
-            <h2>Gerenciamento de Usuário</h2>
+            <h2>Gerenciamento de Usuários</h2>
               <button type="button" data-bs-toggle="modal" data-bs-target="#supportModal">
                 <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
               </button>
@@ -179,7 +179,7 @@
                 <div class="modal-dialog modal-lg">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Suporte de Gerenciamento de Usuário</h5>
+                      <h5 class="modal-title" id="exampleModalLabel">Suporte de Gerenciamento de Usuários</h5>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
