--- a/product_registration.html
+++ b/product_registration.html
@@ -173,10 +173,28 @@
     <section class="registration">
       <div class="title">
         <h2>Cadastrar novo produto</h2>
-        <a  href="">
-          <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
-        </a> 
-      </div>
+          <button type="button" data-bs-toggle="modal" data-bs-target="#supportModal">
+            <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
+          </button>
+          <!-- Modal Support -->
+          <div class="modal fade" id="supportModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Suporte de Cadastro de Produto</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <h6>• Insira os dados em cada campo: nome, sobrenome, usuário e email.</h6>
+                    <h6>• Selecione uma opção de cargo e nível de acesso.</h6>
+                    <h6>• Clicar no botão cadastrar.</h6>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div> 
       <div class="form">
         <h5 class="product">O que você deseja cadastrar?</h5>
         <div class="produto-tipo" id="produto-tipo">
