Modal de Suporte da tela de gerenciamento de produtos

--- a/product_management.html
+++ b/product_management.html
@@ -171,10 +171,28 @@
         <section class="section-title">
           <div class="title">
             <h2>Gerenciamento de produtos</h2>   
-            <a  href="">
+            <button type="button" data-bs-toggle="modal" data-bs-target="#supportModal">
               <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
-            </a> 
-          </div>
+            </button>
+            <!-- Modal Support -->
+            <div class="modal fade" id="supportModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Suporte de Gerenciamento de Produtos</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form>
+                      <h6>• Insira os dados em cada campo: nome, sobrenome, usuário e email.</h6>
+                      <h6>• Selecione uma opção de cargo e nível de acesso.</h6>
+                      <h6>• Clicar no botão cadastrar.</h6>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div> 
         </section>
 
         <!--Tabela -> Gerenciamento de Produtos-->
