--- a/production_registration.html
+++ b/production_registration.html
@@ -168,11 +168,29 @@
         </header>
         <section class="registration">
           <div class="title">
-          <h2>Cadastro de Nova Produção</h2>
-            <a  href="">
-              <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
-            </a> 
+          <h2>Cadastrar nova produção</h2>
+          <button type="button" data-bs-toggle="modal" data-bs-target="#supportModal">
+            <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
+          </button>
+          <!-- Modal Support -->
+          <div class="modal fade" id="supportModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Suporte de Cadastro de Produção</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <h6>• Insira os dados em cada campo: nome, sobrenome, usuário e email.</h6>
+                    <h6>• Selecione uma opção de cargo e nível de acesso.</h6>
+                    <h6>• Clicar no botão cadastrar.</h6>
+                  </form>
+                </div>
+              </div>
+            </div>
           </div>
+      </div>
             <div class="form">
               <div class="name-tipe-batch">
                 <div class="name">
