texto modal atualizado

--- a/user_registration.html
+++ b/user_registration.html
@@ -181,9 +181,11 @@
                       </div>
                       <div class="modal-body">
                         <form>
-                          <h6>• Insira os dados em cada campo: nome, sobrenome, usuário e email.</h6>
-                          <h6>• Selecione uma opção de cargo e nível de acesso.</h6>
-                          <h6>• Clicar no botão cadastrar.</h6>
+                          <h5>Para realizar cadastro de um usuário, você deverá seguir os seguintes passos: </h5>
+                          <h6>• Inserir os dados em cada campo: nome, sobrenome, usuário e email.</h6>
+                          <h6>• Selecionar uma opção de cargo e nível de acesso.</h6>
+                          <h6>• Para finalizar, você deverá clicar no botão cadastrar.</h6>
+                          <h6>• Caso deseje sair desta página, clique no "x" acima.</h6>
                         </form>
                       </div>
                     </div>
