--- a/production_registration.html
+++ b/production_registration.html
@@ -147,8 +147,9 @@
             <li id="usuario">
               <div class="btn-group">
                 <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none " type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <h6 id="user">
-                    </h6>
+                  <h6 id="user">
+                    Taila Santos
+                  </h6>
                 </button>
                 <ul class="dropdown-menu">
                   <li>
