Select com os produtos em andamento

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -205,9 +205,7 @@
                   <div class="p-t-q-p-t" id="boxsale">
                     <div class="product-type-quantity">
                       <div class="product">
-                        <label>Produto
-                          <select id="product"></select>
-                          <option value=""></option>
+                        <label id="productLabel">Produto
                           <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                         </label>
                       </div>
