Melhorias no modal de editar de produção

--- a/production_management.html
+++ b/production_management.html
@@ -303,7 +303,7 @@
       </div>
       <div class="lot">
         <label for="">Lote
-          <input id="lote2" type="text" placeholder="" />
+          <input id="lote2" type="text" placeholder="" disabled/>
         </label>
       </div>
     </div>
@@ -329,7 +329,7 @@
     <div class="group">
       <div class="employee">
         <label for="">Funcionário
-          <input id="funcionario2" type="text" placeholder="" />
+          <input id="funcionario2" type="text" placeholder="" disabled/>
         </label>
       </div>
       <div class="date-production">
@@ -347,7 +347,7 @@
     <div class="group">
       <div class="value-production">
         <label for="">Valor total da produção
-          <input id="valortotalprocucao2" type="text" placeholder="" />
+          <input id="valortotalprocucao2" type="text" placeholder="" disabled/>
         </label>
       </div>
       <div class="time">
