textos dos modais de suporte

--- a/product_management.html
+++ b/product_management.html
@@ -184,9 +184,12 @@
                   </div>
                   <div class="modal-body">
                     <form>
-                      <h6>• Insira os dados em cada campo: nome, sobrenome, usuário e email.</h6>
-                      <h6>• Selecione uma opção de cargo e nível de acesso.</h6>
-                      <h6>• Clicar no botão cadastrar.</h6>
+                      <h5>Nesta página, terá uma tabela com o nome do produto. Para realizar alterações escolha uma opção:</h5>
+                      <h6>• Visualizar: você deverá clicar no olho e terá acesso aos produtos cadastradas no sistema.</h6>
+                      <h6>• Editar: você deverá clicar no lápis, inserir os dados e clicar no botão para salvar as alterações.</h6>
+                      <h6>• Deletar: você deverá clicar na lixeira, e confirmar se quer excluir ou não.</h6>
+                      <h6>• Para finalizar, você deverá clicar no botão cadastrar.</h6>
+                      <h6>• Caso deseje sair desta página, clique no "x" acima.</h6>
                     </form>
                   </div>
                 </div>
