--- a/production_registration.html
+++ b/production_registration.html
@@ -183,9 +183,15 @@
                 </div>
                 <div class="modal-body">
                   <form>
-                    <h6>• Insira os dados em cada campo: nome, sobrenome, usuário e email.</h6>
-                    <h6>• Selecione uma opção de cargo e nível de acesso.</h6>
-                    <h6>• Clicar no botão cadastrar.</h6>
+                    <h5>Para realizar o cadastro de uma produção, você deverá seguir os seguintes passos:</h5>
+                    <h6>• Escolher a opção e tipo da produção.</h6>
+                    <h6>• Selecionar o tipo de validade.</h6>
+                    <h6>• Caso a opção seja prazo, preencha os campos com a quantidade de dias válidos.</h6>
+                    <h6>• Caso a opção seja data, informa a data de fabricação e a de validade.</h6>
+                    <h6>• Preencha o campo número de pacotes e selecione a unidade.</h6>
+                    <h6>• Obs.: O campo lote é gerido pelo sistema.</h6>
+                    <h6>• Para finalizar, você deverá clicar no botão cadastrar.</h6>
+                    <h6>• Caso deseje sair desta página, clique no "x" acima.</h6>
                   </form>
                 </div>
               </div>
