--- a/reports_product.html
+++ b/reports_product.html
@@ -177,9 +177,9 @@
                     </div>
                     <div class="modal-body">
                       <form>
-                        <h6>• Insira os dados em cada campo: nome, sobrenome, usuário e email.</h6>
-                        <h6>• Selecione uma opção de cargo e nível de acesso.</h6>
-                        <h6>• Clicar no botão cadastrar.</h6>
+                        <h5>Nesta página, você terá 3 (três) opções de gráficos.</h5>
+                        <h6>• Sendo eles de barra, linear e rosca com base nos produtos e quantidade cadastrados.</h6>
+                        <h6>• Caso queira sair desta página, clique no "x" acima.</h6>
                       </form>
                     </div>
                   </div>
