corrigindo espacamento na table

--- a/production_management.html
+++ b/production_management.html
@@ -187,9 +187,9 @@
             <table id="myTable" class="table">
               <thead>
                   <tr>
-                      <th>Nome</th>
-                      <th>Tipo</th>
-                      <th>Lote</th>
+                    <th id="nome-table">Nome</th>
+                    <th id="tipo-table">Tipo</th>
+                    <th id="lote-table">Lote</th>
                       <th id="opcoes">Opções</th>
                   </tr>
               </thead>
