modais de suporte atualizados

--- a/home.html
+++ b/home.html
@@ -165,9 +165,28 @@
         <section class="section-table">
           <div class="title">
             <h2>Encomendas</h2>
-            <a  href="">
+            <button type="button" data-bs-toggle="modal" data-bs-target="#supportModal">
               <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
-            </a> 
+            </button>
+            <!-- Modal Support -->
+            <div class="modal fade" id="supportModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Suporte de Encomendas</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form>
+                      <h5>Nesta página, irá ter acesso a informações das encomendas que estão mais próximas.</h5>
+                      <h6>• As encomendas serão identificadas, de acordo com o número do pedido.</h6>
+                      <h6>• Para ter acesso as outras produções, clique no texto "ver mais" e será redirecionado para a tela de encomendas.</h6>
+                      <h6>• Caso deseje sair desta página, clique no "x" acima.</h6>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>          
           <table class="table">
             <tbody>
@@ -191,10 +210,29 @@
         <!--Tabela Validade dos Produtos-->
         <section class="section-table" >
           <div class="title">
-            <h2>Validade dos Produtos</h2>
-            <a  href="">
+            <h2>Validade das Produções</h2>
+            <button type="button" data-bs-toggle="modal" data-bs-target="#supportModal">
               <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
-            </a> 
+            </button>
+            <!-- Modal Support -->
+            <div class="modal fade" id="supportModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Suporte de Validade das Produções</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form>
+                      <h5>Nesta página, irá ter acesso a informações das produções que estão mais próximas.</h5>
+                      <h6>• As produções poderão ser identificadas, de acordo com a quantidade de dias para vencimento e número da produção.</h6>
+                      <h6>• Para ter acesso as outras produções, clique no texto "ver mais" e será redirecionado para a tela de gerenciamento de produções.</h6>
+                      <h6>• Caso deseje sair desta página, clique no "x" acima.</h6>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <table class="table">
             <tbody>
