--- a/product_management.html
+++ b/product_management.html
@@ -184,7 +184,7 @@
                   </div>
                   <div class="modal-body">
                     <form>
-                      <h5>Nesta página, terá uma tabela com o nome do produto. Para realizar alterações escolha uma opção:</h5>
+                      <h5>Nesta página, irá ter uma tabela com o nome do produto. Para realizar alterações escolha uma opção:</h5>
                       <h6>• Visualizar: você deverá clicar no olho e terá acesso aos produtos cadastradas no sistema.</h6>
                       <h6>• Editar: você deverá clicar no lápis, inserir os dados e clicar no botão para salvar as alterações.</h6>
                       <h6>• Deletar: você deverá clicar na lixeira, e confirmar se quer excluir ou não.</h6>
