--- a/orders.html
+++ b/orders.html
@@ -186,7 +186,7 @@
               </div>
               <div class="modal-body">
                 <form>
-                  <h5>Nesta página, terá uma tabela com data de entrega, n° do pedido, status, pagamento. Para realizar alterações escolha uma opção:</h5>
+                  <h5>Nesta página, irá ter uma tabela com data de entrega, n° do pedido, status, pagamento. Para realizar alterações escolha uma opção:</h5>
                   <h6>• Visualizar: você deverá clicar no olho e terá acesso as encomendas cadastradas no sistema.</h6>
                   <h6>• Editar: você deverá clicar no lápis, inserir os dados e clicar no botão para salvar as alterações.</h6>
                   <h6>• Deletar: você deverá clicar na lixeira, e confirmar se quer excluir ou não.</h6>
