Modal de suporte da home ajeitado

--- a/home.html
+++ b/home.html
@@ -211,11 +211,11 @@
         <section class="section-table" >
           <div class="title">
             <h2>Validade das Produções</h2>
-            <button type="button" data-bs-toggle="modal" data-bs-target="#supportModal">
+            <button type="button" data-bs-toggle="modal" data-bs-target="#supportModalProduction">
               <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
             </button>
             <!-- Modal Support -->
-            <div class="modal fade" id="supportModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="supportModalProduction" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                   <div class="modal-header">
