--- a/sale_management.html
+++ b/sale_management.html
@@ -305,7 +305,7 @@
 
   <form>
 
-    <table>
+    <!-- <table>
       <tr>
         <th class="top-table">Item</th>
         <th class="top-table">Quantidade</th>
@@ -321,7 +321,7 @@
         <td class="data-table">20</td>
         <td class="data-table">R$ 0,69</td>
       </tr>
-    </table>
+    </table> -->
 
     <h6>Informações de pagamento</h6>
 
