Modal Checked da tela de cadastro de produto <PRONTO>

--- a/user_registration.html
+++ b/user_registration.html
@@ -236,7 +236,7 @@
                     </div>
                   </div>
                 </div>
-                <!-- Modal Support -->
+                <!-- Modal Checked -->
                 <div class="modal fade" id="checked" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
