--- a/sale_registration.html
+++ b/sale_registration.html
@@ -194,7 +194,7 @@
                 <div class="form">
                   <div class="seller-date" id="boxdate">
                     <label>Vendedor
-                      <input id="seller" type="text" placeholder=""/>
+                      <input id="seller" type="text" placeholder="" disabled/>
                       <p id="alerta_vendedor" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <label>Data
@@ -210,9 +210,7 @@
                         </label>
                       </div>
                       <div class="type">
-                        <label>Tipo
-                          <select id="type"></select>
-                          <option value=""></option>
+                        <label id="typeLabel">Tipo
                           <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                         </label>
                       </div>
