Novo item no cadastro de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -252,6 +252,14 @@
                       </label>
                     </div>
                   </div>
+
+                  <div class="production-available">
+                    <label>Produções disponíveis
+                      <input id="production-available" type="text" placeholder=""/>
+                      <p id="alerta_production-available" style="display: none;">O Campo precisa ser preenchido</p>
+                    </label>
+                  </div>
+
                   <div class="total-general-2" id="boxproduct">
                     <label>Total geral
                       <input id="total-general" type="text" placeholder=""/>
