Historico e gerenciamento de vendas em andamento

--- a/sale_management.html
+++ b/sale_management.html
@@ -228,7 +228,7 @@
     </div>
     <form>
 
-      <table>
+      <!-- <table>
         <tr>
           <th class="top-table">Item</th>
           <th class="top-table">Quantidade</th>
@@ -244,7 +244,7 @@
           <td class="data-table">20</td>
           <td class="data-table">R$ 0,69</td>
         </tr>
-      </table>
+      </table> -->
 
       <h6>Informações de pagamento</h6>
 
