--- a/historic.html
+++ b/historic.html
@@ -328,7 +328,7 @@
   <!-- SCRIPTS -->
   <script src="script/preloader.js"></script>
   <script type="module" src="script/historic.js"></script>
-  <script type="module" src="script/modal.js"></script>
+  <!-- <script type="module" src="script/modal.js"></script> -->
 
 </body>
 </html>
