--- a/product_management.html
+++ b/product_management.html
@@ -320,7 +320,7 @@
 <!-- SCRIPTS -->
 <script src="script/preloader.js"></script>
 <script type="module" src="script/product_management.js"></script>
-<script type="module" src="script/modal.js"></script>
+<!-- <script type="module" src="script/modal.js"></script> -->
 
 </body>
 </html>
