--- a/production_registration.html
+++ b/production_registration.html
@@ -294,7 +294,7 @@
 
 <script src="script/preloader.js"></script>
 <script type="module" src="script/production_registration.js"></script>
-<script type="module" src="script/modal.js"></script>
+<!-- <script type="module" src="script/modal.js"></script> -->
 
 </body>
 
