--- a/sale_registration.html
+++ b/sale_registration.html
@@ -254,8 +254,8 @@
                   </div>
 
                   <div class="production-available">
-                    <label>Produções disponíveis
-                      <input id="production-available" type="text" placeholder=""/>
+                    <label>Produção recomendada
+                      <input id="production-available" type="text" placeholder="" disabled/>
                       <p id="alerta_production-available" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
