--- a/production_registration.html
+++ b/production_registration.html
@@ -119,7 +119,7 @@
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
                 <div class="set1">
                   <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
-                  <li><a href="settings.html" class="link-dark rounded">Configurações</a></li>
+                  <li><a href="settings_user.html" class="link-dark rounded">Configurações</a></li>
                 </div>
               </button>
             </li>
