Ajustado <form> da tela de cadastro de vendas e colocado hover

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -248,18 +248,15 @@
                       <label>Total
                         <input id="total" type="text" placeholder=""/>
                         <p id="alerta_total" style="display: none;">O Campo precisa ser preenchido</p>
-                        <button type="button">Adicionar</button>
+                      </label>
+                      <label class="production-available">Produção recomendada
+                        <input id="production-available" type="text" placeholder="" disabled/>
+                        <p id="alerta_production-available" style="display: none;">O Campo precisa ser preenchido</p>
+                        <button type="button">
+                          Adicionar</button>
                       </label>
                     </div>
                   </div>
-
-                  <div class="production-available">
-                    <label>Produção recomendada
-                      <input id="production-available" type="text" placeholder="" disabled/>
-                      <p id="alerta_production-available" style="display: none;">O Campo precisa ser preenchido</p>
-                    </label>
-                  </div>
-
                   <div class="total-general-2" id="boxproduct">
                     <label>Total geral
                       <input id="total-general" type="text" placeholder=""/>
